--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <title>AR</title>
 
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
@@ -10,7 +12,12 @@
 <body style="margin: 0; overflow: hidden;">
 <h1>Привет</h1>
 <a-scene embedded arjs="debugUIEnabled: false; sourceType: webcam;">
-    <a-box position="0 0.5 0" material="opacity: 0.5;"></a-box>
+    <a-assets>
+        <video id="video" autoplay loop="true" src="assets/video/animal_planet.mp4"></video>
+    </a-assets>
+
+    <!-- Using the asset management system. -->
+    <a-video src="#video" width="100%" height="100%" position="0 0 -20"></a-video>
     <a-marker-camera preset="hiro"></a-marker-camera>
 </a-scene>
 </body>
