--- a/video/index.html
+++ b/video/index.html
@@ -46,7 +46,7 @@
 			alpha: true
 		});
 		renderer.setClearColor(new THREE.Color('lightgrey'), 0)
-		renderer.setSize(480, 480);
+		renderer.setSize(640, 480);
 		renderer.domElement.style.position = 'absolute'
 		renderer.domElement.style.top = '0px'
 		renderer.domElement.style.left = '0px'
@@ -107,7 +107,7 @@
 		texture.minFilter = THREE.LinearFilter;
 		texture.magFilter = THREE.LinearFilter;
 		texture.format = THREE.RGBFormat;
-		let material1 = new THREE.MeshBasicMaterial({map: texture});
+		let material1 = new THREE.MeshNormalMaterial({map: texture});
 
 		mesh1 = new THREE.Mesh(geometry1, material1);
 		mesh1.rotation.x = -Math.PI / 2;
