--- a/video/index.html
+++ b/video/index.html
@@ -107,7 +107,7 @@
 		texture.minFilter = THREE.LinearFilter;
 		texture.magFilter = THREE.LinearFilter;
 		texture.format = THREE.RGBFormat;
-		let material1 = new THREE.MeshNormalMaterial({map: texture});
+		let material1 = new THREE.MeshBasicMaterial({map: texture});
 
 		mesh1 = new THREE.Mesh(geometry1, material1);
 		mesh1.rotation.x = -Math.PI / 2;
