Замена видео для проверки работы на мобилках

--- a/video/index.html
+++ b/video/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    
-    <title>Hello, world!</title>
+
+    <title>AR-VIDEO</title>
     <!-- include three.js library -->
     <script src='js/three.js'></script>
     <!-- include jsartookit -->
@@ -19,7 +19,7 @@
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
 <video id="video" autoplay loop crossOrigin="anonymous" webkit-playsinline style="display:none">
-    <source src="video/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
+    <source src="../simple-test/assets/video/animal_planet.mp4">
     <source src="video/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 </video>
 
