--- a/video/index.html
+++ b/video/index.html
@@ -18,7 +18,7 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-<video id="video" autoplay loop crossOrigin="anonymous" webkit-playsinline style="display:none">
+<video id="video" autoplay muted loop crossOrigin="anonymous" webkit-playsinline playsinline style="display:none">
     <source src="../simple-test/assets/video/animal_planet.mp4">
     <source src="video/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 </video>
