--- a/video/index.html
+++ b/video/index.html
@@ -18,15 +18,20 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-<video id="video" src="../simple-test/assets/video/animal_planet.mp4" autoplay muted loop crossOrigin="anonymous" webkit-playsinline playsinline style="display:none">
+<video
+    id="video"
+    src="../simple-test/assets/video/animal_planet.mp4"
+    playsinline
+    webkit-playsinline
+    autoplay
+    muted
+    loop
+    crossOrigin="anonymous"
+    style="display:none"
+>
     <!--<source src="../simple-test/assets/video/animal_planet.mp4">-->
     <!--<source src="video/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>-->
 </video>
-
-<!--
-  Example created by Lee Stemkoski: https://github.com/stemkoski
-  Based on the AR.js library and examples created by Jerome Etienne: https://github.com/jeromeetienne/AR.js/
--->
 
 <script>
 	var scene, camera, renderer, clock, deltaTime, totalTime;
