Добавление кнопки для запуска видео

--- a/video/index.html
+++ b/video/index.html
@@ -14,6 +14,9 @@
     <script src="threex/threex-artoolkitcontext.js"></script>
     <script src="threex/threex-arbasecontrols.js"></script>
     <script src="threex/threex-armarkercontrols.js"></script>
+
+    <link rel="stylesheet" href="css/button.css">
+    <script src="js/runVideo.js" defer></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
@@ -143,6 +146,8 @@
 		render();
 	}
 </script>
+
+<div id="button" class="button">Клик!</div>
 
 </body>
 </html>
