--- a/simple-test/index.html
+++ b/simple-test/index.html
@@ -14,6 +14,8 @@
         	init: function () {
         	    let marker = this.el;
         	    console.log("MARKER", marker);
+
+        	    this.geometry = new THREE.PlaneBufferGeometry(1, 1, 2, 2);
         	}
         })
     </script>
@@ -33,8 +35,6 @@
     <!-- Using the asset management system. -->
     <a-video
         src="#video"
-        width="5"
-        height="5"
         position="0 0 0"
         rotation="-90 0 0"
     ></a-video>
