Обработка нескольких маркеров

--- a/simple-test/index.html
+++ b/simple-test/index.html
@@ -56,11 +56,12 @@
         rotation="-90 0 0"
     ></a-video>
 
-    <a-marker-camera
+    <a-entity
+        camera
         id="marker"
         preset="hiro"
         registerevents
-    ></a-marker-camera>
+    ></a-entity>
 </a-scene>
 </body>
 </html>
