Убрал лишние данные из a-video

--- a/simple-test/index.html
+++ b/simple-test/index.html
@@ -50,18 +50,13 @@
     </a-assets>
 
     <!-- Using the asset management system. -->
-    <a-video
-        src="#video"
-        position="0 0 0"
-        rotation="-90 0 0"
-    ></a-video>
+    <a-video src="#video"></a-video>
 
-    <a-entity
-        camera
+    <a-marker-camera
         id="marker"
         preset="hiro"
         registerevents
-    ></a-entity>
+    ></a-marker-camera>
 </a-scene>
 </body>
 </html>
