--- a/simple-test/index.html
+++ b/simple-test/index.html
@@ -6,7 +6,7 @@
 
     <title>AR</title>
 
-    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 
     <script>
@@ -50,7 +50,11 @@
     </a-assets>
 
     <!-- Using the asset management system. -->
-    <a-video src="#video"></a-video>
+    <a-video
+        src="#video"
+        position="0 0 0"
+        rotation="-90 0 0"
+    ></a-video>
 
     <a-marker-camera
         id="marker"
