--- a/simple-test/index.html
+++ b/simple-test/index.html
@@ -50,11 +50,13 @@
     </a-assets>
 
     <!-- Using the asset management system. -->
-    <a-video
-        src="#video"
-        position="0 0 0"
-        rotation="-90 0 0"
-    ></a-video>
+<!--    <a-video-->
+<!--        src="#video"-->
+<!--        position="0 0 0"-->
+<!--        rotation="-90 0 0"-->
+<!--    ></a-video>-->
+
+    <a-entity video="src: #video; position: 0 0 0; rotation: -90 0 0"></a-entity>
 
     <a-marker-camera
         id="marker"
