--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -11,7 +11,7 @@
         AFRAME.registerComponent("markerHandler", {
 	        init: function () {
 		        let marker = this.el;
-		        console.log("MARKER", marker);
+		        console.log('MARKER', marker);
 
 		        marker.addEventListener("markerFound", (e)=>{
 			        console.log("found")
