--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -30,7 +30,7 @@
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='sourceType: webcam;'>
 
-        <a-marker markerHandler preset='hiro' >
+        <a-marker markerHandler preset='hiro' emitevents="true">
             <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
         </a-marker>
 
