--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -10,8 +10,22 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='sourceType: webcam;'>
+        <a-assets>
+            <video
+                id="video"
+                autoplay
+                loop="true"
+                src="../simple-test/assets/video/animal_planet.mp4"
+                webkit-playsinline
+            ></video>
+        </a-assets>
+
         <a-marker preset='hiro'>
-            <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+            <a-video
+                src="#video"
+                position="0 0 0"
+                rotation="-90 0 0"
+            ></a-video>
         </a-marker>
 
         <a-camera-static/>
