--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -7,15 +7,20 @@
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/dev/aframe/build/aframe-ar.js"></script>
 
+    <link rel="stylesheet" href="css/button.css">
+    <script src="js/runVideo.js" defer></script>
+
 </head>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='sourceType: webcam;'>
         <a-assets>
             <video
                 id="video"
-                autoplay
-                loop="true"
+                loop
+                muted
                 src="../simple-test/assets/video/animal_planet.mp4"
+                crossOrigin="anonymous"
+                playsinline
                 webkit-playsinline
             ></video>
         </a-assets>
@@ -30,6 +35,8 @@
 
         <a-camera-static/>
     </a-scene>
+
+    <div id="button" class="button"></div>
 
     <script>
 	    var m = document.querySelector("a-marker");
