Мета теги для apple

--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <title>Marker Found / Lost</title>
 
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
