Запуск видео на apple

--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -18,12 +18,14 @@
         <a-assets>
             <video
                 id="video"
-                loop
-                muted
                 src="../simple-test/assets/video/animal_planet.mp4"
-                crossOrigin="anonymous"
                 playsinline
                 webkit-playsinline
+                autoplay
+                muted
+                loop
+                crossOrigin="anonymous"
+                style="display:none"
             ></video>
         </a-assets>
 
