--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs='sourceType: webcam;'>
+    <a-scene embedded arjs='debugUIEnabled: false; sourceType: webcam;'>
         <a-assets>
             <video
                 id="video"
