Тест запуска видео

--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -28,13 +28,13 @@
             ></video>
         </a-assets>
 
-        <a-marker preset='hiro'>
-            <a-video
-                src="#video"
-                position="0 0 0"
-                rotation="-90 0 0"
-            ></a-video>
-        </a-marker>
+        <a-video
+            src="#video"
+            position="0 0 0"
+            rotation="-90 0 0"
+        ></a-video>
+
+        <a-marker preset='hiro'></a-marker>
 
         <a-camera-static/>
     </a-scene>
