--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -28,15 +28,15 @@
             ></video>
         </a-assets>
 
-        <a-video
-            src="#video"
-            position="0 0 0"
-            rotation="-90 0 0"
-        ></a-video>
+        <a-marker preset='hiro'>
+            <a-video
+                src="#video"
+                position="0 0 0"
+                rotation="-90 0 0"
+            ></a-video>
+        </a-marker>
 
-        <a-marker preset='hiro'></a-marker>
-
-        <a-camera-static/>
+        <a-entity camera></a-entity>
     </a-scene>
 
     <div id="button" class="button"></div>
