Добавляем постер к видео

--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -24,6 +24,7 @@
                 muted
                 loop
                 crossOrigin="anonymous"
+                poster="../simple-test/assets/poster.jpg"
             ></video>
         </a-assets>
 
