--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -45,7 +45,7 @@
             ></a-video>
         </a-marker>
 
-        <a-marker preset="custom" type="pattern" url="assets/markers/marker.patt">
+        <a-marker preset="custom" type="pattern" url="assets/markers/custom-marker.patt">
             <a-video
                 src="#cartoon"
                 position="0 0 0"
@@ -60,7 +60,7 @@
 
     <script>
         var scene = document.querySelector("a-scene"),
-            video = document.getElementById('animal');
+            video = document.getElementById('cartoon');
 
         scene.addEventListener("markerFound", (e)=>{
         	if (!Played) {
