--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -37,7 +37,7 @@
             ></video>
         </a-assets>
 
-        <a-marker preset='hiro'>
+        <a-marker preset="custom" type="pattern" patternUrl="assets/markers/marker.patt">
             <a-video
                 src="#animal"
                 position="0 0 0"
@@ -45,7 +45,7 @@
             ></a-video>
         </a-marker>
 
-        <a-marker preset="custom" type="pattern" url="assets/markers/custom-marker.patt">
+        <a-marker preset="custom" type="pattern" patternUrl="assets/markers/custom-marker.patt">
             <a-video
                 src="#cartoon"
                 position="0 0 0"
