--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -37,7 +37,11 @@
             ></video>
         </a-assets>
 
-        <a-marker preset="custom" type="pattern" patternUrl="assets/markers/marker.patt">
+        <a-marker
+            preset="custom"
+            type="pattern"
+            url="assets/markers/marker.patt"
+        >
             <a-video
                 src="#animal"
                 position="0 0 0"
@@ -45,7 +49,11 @@
             ></a-video>
         </a-marker>
 
-        <a-marker preset="custom" type="pattern" patternUrl="assets/markers/custom-marker.patt">
+        <a-marker
+            preset="custom"
+            type="pattern"
+            url="assets/markers/custom-marker.patt"
+        >
             <a-video
                 src="#cartoon"
                 position="0 0 0"
