--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -37,11 +37,7 @@
             ></video>
         </a-assets>
 
-        <a-marker
-            preset="custom"
-            type="pattern"
-            url="assets/markers/marker.patt"
-        >
+        <a-marker preset="hiro">
             <a-video
                 src="#animal"
                 position="0 0 0"
@@ -52,7 +48,7 @@
         <a-marker
             preset="custom"
             type="pattern"
-            url="assets/markers/marker-without-image.patt"
+            url="assets/markers/simple-marker.patt"
         >
             <a-video
                 src="#cartoon"
