--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -64,7 +64,7 @@
 
     <script>
         var scene = document.querySelector("a-scene"),
-            video = document.getElementById('cartoon');
+            video = document.getElementById('animal');
 
         scene.addEventListener("markerFound", (e)=>{
         	console.log("MARKER FOUND");
