Тетс кастом маркера AR.js

--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -37,7 +37,11 @@
             ></video>
         </a-assets>
 
-        <a-marker preset="hiro">
+        <a-marker
+            preset="custom"
+            type="pattern"
+            url="assets/markers/marker.patt"
+        >
             <a-video
                 src="#animal"
                 position="0 0 0"
