Тест собственного маркера

--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -40,7 +40,7 @@
         <a-marker
             preset="custom"
             type="pattern"
-            url="assets/markers/marker.patt"
+            url="assets/markers/simple-marker.patt"
         >
             <a-video
                 src="#animal"
