--- a/marker-found-lost/index.html
+++ b/marker-found-lost/index.html
@@ -6,7 +6,7 @@
 
     <title>Marker Found / Lost</title>
 
-    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+    <script src="js/aframe/aframe-v0.9.0.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/dev/aframe/build/aframe-ar.js"></script>
 
     <link rel="stylesheet" href="css/button.css">
@@ -38,9 +38,7 @@
         </a-assets>
 
         <a-marker
-            preset="custom"
-            type="pattern"
-            url="assets/markers/text-fill-ratio-5.patt"
+            preset="hiro"
         >
             <a-video
                 src="#animal"
